force-app/main/default/objects/KlopotekAccount__c/KlopotekAccount__c.object-meta.xml
<CustomObject>
    <label>Klopotek Account</label>
    <nameField>
        <displayFormat>KLPA-{0000000}</displayFormat>
        <label>Klopotek Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klopotek Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>