force-app/main/default/objects/KlopotekAccount__c/fields/BRIN__c.field-meta.xml
<CustomField>
    <fullName>BRIN__c</fullName>
    <label>BRIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>