force-app/main/default/objects/KlopotekAccount__c/fields/ConvertError__c.field-meta.xml
<CustomField>
    <fullName>ConvertError__c</fullName>
    <label>Convert Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>