force-app/main/default/objects/KlopotekAccount__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>COUNTRY</label>
    <length>4</length>
    <type>Text</type>
</CustomField>