force-app/main/default/objects/KlopotekAccount__c/fields/FAX_COUNTRY_PREFIX__c.field-meta.xml
<CustomField>
    <fullName>FAX_COUNTRY_PREFIX__c</fullName>
    <label>FAX_COUNTRY_PREFIX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>