force-app/main/default/objects/KlopotekAccount__c/fields/ID_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ID_ADDRESS__c</fullName>
    <label>ID_ADDRESS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>