force-app/main/default/objects/KlopotekAccount__c/fields/SUB_DEPARTMENT2__c.field-meta.xml
<CustomField>
    <fullName>SUB_DEPARTMENT2__c</fullName>
    <label>SUB_DEPARTMENT2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>