force-app/main/default/objects/KlopotekAccount__c/fields/SUB_DEPARTMENT__c.field-meta.xml
<CustomField>
    <fullName>SUB_DEPARTMENT__c</fullName>
    <label>SUB_DEPARTMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>