force-app/main/default/objects/KlopotekAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SCHNR__c</columns>
    <columns>INSTITUTION__c</columns>
    <columns>DEPARTMENT__c</columns>
    <columns>CITY__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>